# vault-mcp-agents

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yaml  pyproject.toml
config/: settings.yaml
policies/: capabilities.yaml
scripts/: setup_vault.sh
src/vault_mcp_agents/: __init__.py  main.py
src/vault_mcp_agents/agents/: __init__.py  factory.py  mcp_langchain_adapter.py
src/vault_mcp_agents/auth/: __init__.py  session.py  vault_authenticator.py
src/vault_mcp_agents/mcp/: __init__.py  base_server.py  compute_server.py  data_server.py  identity_context.py
src/vault_mcp_agents/policy/: __init__.py  engine.py
src/vault_mcp_agents/prompt/: __init__.py  cli.py
src/vault_mcp_agents/vault/: __init__.py  gcp_credentials.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_capability_filter.py  test_gcp_credential_ttl.py  test_identity_context.py  test_policy_engine.py  test_session.py
