[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-mcp-agents"
version = "0.1.0"
description = "Two LangChain agents calling identity-gated MCP servers with Vault-brokered GCP credentials"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langchain>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<0.4",
    "langchain-anthropic>=0.2.0,<0.4",
    "mcp>=1.1.0",
    "hvac>=2.3.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-compute>=1.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
vault-mcp-agents = "vault_mcp_agents.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_mcp_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
